# syn-brain

./: .gitignore  LICENSE  Makefile  README.md  brain_env_clean.yml  environment_sd.yml  full_environment_sd.yml  history_environment_sd.yml  pyproject.toml  requirement_new.txt  requirements.txt  requirements_sd.txt  requirements_training_env.txt  requirements_vit.txt
bash/: captions_gemini.sh  captions_gemma.sh  captions_llava_med.sh  captions_ovis.sh  describe_images.sh  diffusion_test.sh  metrics.sh  sd_lora.sh  sd_validation.sh  sdxl_big_gpu_inference.sh  sdxl_small_gpu_inference.sh  train_sd.sh  train_sd_petr_rank128.sh  train_sd_petr_rank256.sh  train_sd_rank32.sh  train_sdxl_big_gpu.sh  train_sdxl_big_gpu_24_h.sh  train_sdxl_big_gpu_24_h_testing.sh  train_sdxl_small_gpu.sh  train_sdxl_small_gpu_24_h.sh  train_sdxl_small_gpu_24_h_testing.sh
captions/: captions_gemini.json  captions_gemma.json  captions_llava_med.json  captions_llava_med_old.json  captions_ovis_large_old.json
evaluation/: evaluation_data.csv
generated_captions/: generated_llava_captions.json
src/: create_metadata.py  data.py  data_loaders.py  data_synthetic.py  describe_image.py  diffusion_model.py  gen_noise.py  image_captioner.py  image_captioner_gemini.py  image_captioner_gemma.py  image_captioner_llava_med.py  image_captioner_ovis.py  inference.py  main.py  metrics.py  models.py  plot_metrics.py  sd_validation.py  testing_inference_pipeline.py  testing_inference_pipeline_sd.py  train.py  train_lora_sd.py  train_lora_sdxl.py  train_text_to_image.py  train_text_to_image_lora.py  utils.py
(+145 files in other folders)
